--- a/loads/dataset_loads_cp.ipynb
+++ b/loads/dataset_loads_cp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 295,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ds = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,17 +65,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 296,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds = []\n",
     "for _ in range(500):\n",
     "\tp_pot = np.random.rand() * p_max\n",
     "\tp = np.random.rand()\n",
     "\tq = 2*np.random.rand() - 1\n",
     "\tp_feas, q_feas = loads(p, q, p_min, p_max, p_plus, p_pot, q_min, q_max, q_minus, q_plus)\n",
-    "\tX = np.array([p, q, p_pot, p_max, q_max, p_plus, q_plus, q_minus])\n",
+    "\tX = np.array([p, q, p_pot, p_max, q_max, p_plus, q_plus])\n",
     "\ty = np.array([p_feas, q_feas])\n",
     "\n",
     "\tds.append([X, y]) "
@@ -74,7 +82,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 297,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p_min = 0.0\n",
+    "p_max = 0.5\n",
+    "p_plus = 0.35\n",
+    "q_min = -0.5\n",
+    "q_max = 0.5\n",
+    "q_minus = -0.2\n",
+    "q_plus = 0.2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for _ in range(500):\n",
+    "\tp_pot = np.random.rand() * p_max\n",
+    "\tp = np.random.rand()\n",
+    "\tq = 2*np.random.rand() - 1\n",
+    "\tp_feas, q_feas = loads(p, q, p_min, p_max, p_plus, p_pot, q_min, q_max, q_minus, q_plus)\n",
+    "\tX = np.array([p, q, p_pot, p_max, q_max, p_plus, q_plus,])\n",
+    "\ty = np.array([p_feas, q_feas])\n",
+    "\n",
+    "\tds.append([X, y]) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
