--- a/loads/datased_loads.ipynb
+++ b/loads/datased_loads.ipynb
@@ -80,22 +80,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.15"
+       "0.0"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "env.simulator.devices[2].q_plus"
+    "env.simulator.devices[4].p_min"
    ]
   },
   {
