--- a/Preprint/Preprint.tex
+++ b/Preprint/Preprint.tex
@@ -132,7 +132,7 @@
 \IfFileExists{xurl.sty}{\usepackage{xurl}}{} % add URL line breaks if available
 \urlstyle{same} % disable monospaced font for URLs
 \hypersetup{
-  pdftitle={Demo arXiv template},
+  pdftitle={KKT-Informed Neural Network},
   pdfauthor={Carmine Delle Femine},
   colorlinks=true,
   linkcolor={blue},
@@ -142,7 +142,14 @@
   pdfcreator={LaTeX via pandoc}}
 
 \newcommand{\runninghead}{A Preprint }
-\title{Demo arXiv template}
+\title{KKT-Informed Neural Network}
+\usepackage{etoolbox}
+\makeatletter
+\providecommand{\subtitle}[1]{% add subtitle to \maketitle
+  \apptocmd{\@title}{\par {\large #1 \par}}{}{}
+}
+\makeatother
+\subtitle{A parallel solver fot parametric convex optimization problem}
 \def\asep{\\\\\\ } % default: all authors on same column
 \author{\textbf{Carmine Delle Femine}\\}
 \date{}
@@ -154,9 +161,9 @@ This is the abstract
 
 \section{Introduction}\label{introduction}
 
-\section{Proposed method}\label{proposed-method}
+\section{Background}\label{background}
 
-Consider a convex parametric optimization problem in the standard form:
+Consider a parametric convex optimization problem in the standard form:
 
 \[
 \begin{aligned}
@@ -179,15 +186,23 @@ constraints and
 \(\mathcal{D} = \bigcap_{i=1}^{m} \mathcal{D}_{g_i} \cap \mathcal{D}_{f}\)
 is the domain of the optimization problem.
 
-Assume that \(g_i\) satisfies Slater's condition.
-\(x^* \in \mathcal{D}\) is optimal if and only if there are \(\lambda\)
-and \(\nu\) that, with \(x^*\), satisy the Karush-Kuhn-Tucker conditions
-(KKT):
+Assume differentiable cost and constraints functions and that \(g_i\)
+satisfies Slater's condition. Given a set of parameters \(\theta\),
+\(x^* \in \mathcal{D}\) is optimal if and only if there are
+\(\lambda^*\) and \(\nu^*\) that, with \(x^*\), satisy the
+Karush-Kuhn-Tucker conditions (KKT):
 
-\[
-\]
+\begin{align}
+    A(\theta) x^* - b(\theta) = 0&\\
+    g_i(x^*, \theta) \leq 0& \quad i=1,\dots, m\\
+    \lambda_i^* \geq 0& \quad i=1,\dots, m\\
+    \lambda_i^* g_i(x^*, \theta) = 0& \quad i=1,\dots, m{Compl}\\
+    \nabla_{x^*} f(x^*, \theta) + \sum\nolimits_{i=1}^m \lambda^*_i\nabla_{x^*} g_i(x^*, \theta) + A^T\nu^* = 0 &{Stationairty}
+\end{align}
 
-\section{Case of study}\label{case-of-study}
+\section{Proposed method}\label{proposed-method}
+
+\section{Case study}\label{case-study}
 
 \subsection{Problem description}\label{problem-description}
 
