--- a/loads/dataset_loads_cp.ipynb
+++ b/loads/dataset_loads_cp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,11 +65,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for _ in range(500):\n",
+    "for _ in range(5000):\n",
     "\tp_pot = np.random.rand() * p_max\n",
     "\tp = np.random.rand()\n",
     "\tq = 2*np.random.rand() - 1\n",
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,11 +97,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for _ in range(500):\n",
+    "for _ in range(5000):\n",
     "\tp_pot = np.random.rand() * p_max\n",
     "\tp = np.random.rand()\n",
     "\tq = 2*np.random.rand() - 1\n",
@@ -114,12 +114,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "from pickle import dump\n",
-    "dump(ds, open(\"dataset_loads.pkl\", \"wb\"))"
+    "dump(ds, open(\"dataset_loads_comp.pkl\", \"wb\"))"
    ]
   },
   {
