--- a/Preprint/Preprint.qmd
+++ b/Preprint/Preprint.qmd
@@ -1,6 +1,6 @@
 ---
-title: "KKT-Informed Neural Network"
-subtitle: "A parallel solver for parametric convex optimization problem"
+title: KKT-Informed Neural Network
+subtitle: A Parallel Solver for Parametric Convex Optimization Problem
 author: 
     name: Carmine Delle Femine
     email: cdellefemine@vicomtech.org
@@ -58,11 +58,11 @@ Assume differentiable cost and constraints functions and that $g_i$ satisfies Sl
 
 KKT-Informed Neural Network (KINN) builds upon the principles of Physics-Informed Neural Networks (PINNs), incorporating mathematical conditions of the Karush-Kuhn-Tucker (KKT) conditions directly into the neural architecture. This integration facilitates a disciplined learning process where the network not only predicts optimization variables but also ensures these predictions are compliant with KKT conditions, essential for guaranteeing the optimality of solutions in convex optimization under exam.
 
-Network architecture is a MLP designed to take problem parameters $\theta$ as input and predict $x^*$, $\lambda^*$, $\nu^*$. A ReLU function is placed at the end of the branch predicting $\lambda^*$ to ensure its feasability.
+Network architecture is a MLP designed to take a batch of problem parameters $\Theta = \{\theta^{(i)}\}_{i=1}^N$ as input and predict $x^*$, $\lambda^*$, $\nu^*$. A ReLU function is placed at the end of the branch predicting $\lambda^*$ to ensure its feasability.
 
 ```{=tex}
 \begin{align}
-\hat{x}, \hat{\lambda}, \hat{\nu} &= \textrm{KINN}(\theta)\\
+(\hat{x}, \hat{\lambda}, \hat{\nu}) &= \textrm{KINN}(\Theta)\\
 \hat{\lambda} &\in \mathbb{R}⁰_+
 \end{align}
 ```
@@ -76,22 +76,35 @@ where:
 
 ```{=tex}
 \begin{align}
-    \mathcal{L}_S =& \|\nabla_{\hat{x}} f(\hat{x}, \theta) + \sum\nolimits_{i=1}^m \hat{\lambda}_i\nabla_{\hat{x}} g_i(\hat{x}, \theta) + A^T\hat{\nu}\|\\ 
-    \mathcal{L}_{I,i}  =& \|\max(0, g_i(\hat{x}, \theta))\|\\
-    \mathcal{L}_E =& \|A(\theta) \hat{x} - b(\theta)\|\\
-    \mathcal{L}_{C,i}  =& \|\hat{\lambda}_i g_i(\hat{x}, \theta)\|\\
+    \mathcal{L}_S =& \|\nabla_{\hat{x}} f(\hat{x}, \theta) + \sum\nolimits_{i=1}^m \hat{\lambda}_i\nabla_{\hat{x}} g_i(\hat{x}, \theta) + A^T\hat{\nu}\|_2\\ 
+    \mathcal{L}_{I,i}  =& \|\max(0, g_i(\hat{x}, \theta))\|_2\\
+    \mathcal{L}_E =& \|A(\theta) \hat{x} - b(\theta)\|_2\\
+    \mathcal{L}_{C,i}  =& \|\hat{\lambda}_i g_i(\hat{x}, \theta)\|_2\\
 \end{align}
 ```
 # Case study
 Let us take such a problem as a test case for this approach:
 
-You have a renewable energy generator in a power grid, whose active and reactive power injections are controllable. The set of injection points $(P,Q)$ is limited by physical constraints, however, so the set-points $(a_P, a_Q)$ must be projected onto that set.
+We have a renewable energy generator in a power grid, whose active and reactive power injections are controllable. The set of injection points $(P,Q)$ is limited by physical constraints, so the set-points $(a_P, a_Q)$ must be projected onto that set.
 
-The feasibile set $\mathcal{D}$ is:
+
+## Problem description
+
+The feasibile set $\mathcal{D}$ is defined by the physical parameters of the generator $\overline{P}_g, \underline{P}_g, P⁺_g, \overline{Q}_g, \underline{Q}_g, Q⁺_g, Q⁻_g$ , characterizing the minimum and maximum possible values and the relationships between active and reactive power, and the dynamic value $P^{\textrm{(max)}}_{g,t}$ which indicates the maximum power that can be generated at that time given the external conditions (e.g. wind speed, solar radiation, etc.):
 
 \begin{equation}
-\mathcal{D} = \{(P, Q) \in \mathbb{R}² | \underline{P}_g \leq P \leq P^{\textrm{(max)}}_{g,t}\}
+\mathcal{D} = \{(P, Q) \in \mathbb{R}² | \underline{P}_g \leq P \leq P^{\textrm{(max)}}_{g,t}, Q_g \leq Q \leq \overline{Q}_g, Q \leq \tau^{(1)}_g P + \rho_g^{(1)}, Q \geq \tau^{(2)}_g P + \rho_g^{(2)}\}
 \end{equation}
+
+where:
+```{=tex}
+\begin{align}
+    \tau^{(1)}_g &= \frac{Q_g⁺ - \overline{Q}_g}{\overline{P_g} - P_g⁺}\\
+    \rho^{(1)}_g &= \overline{Q}_g - \tau^{(1)}_gP_g⁺\\
+    \tau^{(2)}_g &= \frac{Q_g^- - \underline{Q}_g}{\overline{P_g} - P_g⁺}\\
+    \rho^{(2)}_g &= \underline{Q}_g - \tau^{(2)}_gP_g⁺  \\
+\end{align}
+```
 \begin{center}
 \begin{tikzpicture}
 
@@ -134,8 +147,132 @@ The feasibile set $\mathcal{D}$ is:
 \draw[->] (0,-3.5) -- (0,3.5) node[above] {$Q$};
 \end{tikzpicture}
 \end{center}
-## Problem description
+
+The problem could be stated in standard form as:
+
+$$
+\begin{aligned}
+\min_{x \in \mathcal{D} \subseteq\mathbb{R}^2} \quad &\frac{1}{2}\|a - x\|^{2}_{2} \\
+\textrm{s.t.}\quad & G x - h \leq 0\\
+\end{aligned}
+$$
+
+with $a = (a_P, a_Q)$, $x = (P, Q)$ and:
+
+\begin{equation}
+G = \begin{pmatrix}
+-1 & 1 & 1 & 0 & 0 & -\tau^{(1)}_g & \tau^{(2)}_g\\
+0 & 0 & 0 & -1 & 1 & 1 & 1
+\end{pmatrix}^T
+\end{equation}
+
+\begin{equation}
+h = \begin{pmatrix}
+-\underline{P}_g & \overline{P}_g & P^{\textrm{(max)}}_{g,t} & -\underline{Q}_g & \overline{Q}_g & \rho^{(1)}_g & -\rho^{(2)}_g
+\end{pmatrix}^T
+\end{equation}
+
+With associated KKT conditions:
+\begin{align}
+    G\hat{x} - h \leq 0&\\
+    \lambda_i^* \geq 0& \quad i=1,\dots, 7\\
+    G^T\hat\lambda = 0&\\
+    (a-\hat{x}) + G^T\hat\lambda  = 0 &
+\end{align}
 
 ## Experimental results
+The problem described has a two-dimensional optimization variable, ten scalar parameters and seven constraints:
 
+\begin{equation}
+ (X, \Lambda) = \mathrm{KINN}(\Theta)
+\end{equation}
+
+with: 
+\begin{align}
+\Theta \in \mathbb{R}^{N \times 10}, \quad&\Theta_{i} = (a_P^{(i)}, a_Q^{(i)},\overline{P}_g^{(i)}, \underline{P}_g^{(i)}, P_g^{+^{(i)}}, \overline{Q}_g^{(i)}, \underline{Q}_g^{(i)}, Q_g^{+^{(i)}}, Q_g^{-^{(i)}}, P^{\textrm{(max)}^{(i)}}_{g,t})\\
+X \in \mathbb{R}^{N \times 2}, \quad&X_{i} = (P^{(i)}, Q^{(i)})\\
+\Lambda \in \mathbb{R}_+^{0^{N \times 7}}, \quad&\Lambda_{i} = \lambda^{(i)}
+\end{align}
+
+At each training step, a random batch of parameters $\Theta$ was sampled:
+
+\begin{align}
+a_P^{(i)} &\sim U(0~\mathrm{p.u}., 1~\mathrm{p.u.})\\
+a_Q^{(i)} &\sim U(-1~\mathrm{p.u}., 1~\mathrm{p.u.})\\
+\overline{P}_g^{(i)} &\sim U(0.2~\mathrm{p.u}., 0.8~\mathrm{p.u.})\\
+P_g^{+^{(i)}} &\sim U(0~\mathrm{p.u}., \overline{P}_g^{(i)})\\
+\overline{Q}_g^{(i)} &\sim U(0.2~\mathrm{p.u}., 0.8~\mathrm{p.u.})\\
+Q_g^{+^{(i)}} &\sim U(0~\mathrm{p.u}., \overline{Q}_g^{(i)})\\
+P^{\textrm{(max)}^{(i)}}_{g,t} &\sim U(0~\mathrm{p.u}., \overline{P}_g^{(i)})
+\end{align}
+
+Models parameters were update to minimize the following loss function:
+
+$$
+\mathcal{L} = \frac{1}{N}\sum_{i=1}^N(\mathcal{L}_S^{(i)} + \mathcal{L}_{I}^{(i)}  + \mathcal{L}_{C}^{(i)})
+$$
+where:
+
+```{=tex}
+\begin{align}
+    \mathcal{L}_S^{(i)} =& \|(a^{(i)}-\hat{x}^{(i)}) + G^{(i)^{T}}\hat\lambda^{(i)}\|_2\\ 
+    \mathcal{L}_{I}^{(i)}  =& \|\max(0, G^{(i)}\hat{x} - h^{(i)})\|_2\\
+    \mathcal{L}_{C}^{(i)}  =& \|G^{(i)^{T}}\hat\lambda^{(i)}\|_2\\
+\end{align}
+```
+
+### Training
+```{python}
+#| label: fig-polar
+#| echo: false
+#| fig-cap: "A line plot on a polar axis"
+import pandas as pd
+import matplotlib.pyplot as plt
+import seaborn as sns
+sns.set(style='ticks', palette='Set2')
+sns.despine()
+
+stat = pd.read_csv("/home/VICOMTECH/cdellefemine/Documents/code/KKT-NN/Preprint/plots/stat.csv")
+compl = pd.read_csv("/home/VICOMTECH/cdellefemine/Documents/code/KKT-NN/Preprint/plots/compl.csv")
+ineq = pd.read_csv("/home/VICOMTECH/cdellefemine/Documents/code/KKT-NN/Preprint/plots/ineq.csv")
+plt.yscale("log")
+plt.plot(stat['Step'], stat['Value'].ewm(alpha=2 / 3).mean())
+plt.plot(compl['Step'], compl['Value'].ewm(alpha=2 / 3).mean())
+plt.plot(ineq['Step'], ineq['Value'].ewm(alpha=2 / 3).mean())
+
+```
+
+
+### Evaluation
+```{python}
+#| label: fig-polar2
+#| echo: false
+#| fig-cap: "A line plot on a polar axis"
+import pandas as pd
+import matplotlib.pyplot as plt
+import seaborn as sns
+sns.set(style='ticks', palette='Set2')
+sns.despine()
+
+loss = pd.read_csv("/home/VICOMTECH/cdellefemine/Documents/code/KKT-NN/Preprint/plots/loss.csv")
+plt.yscale("log")
+plt.plot(loss['Step'], loss['Value'].ewm(alpha=2 / 3).mean())
+
+```
+
+```{python}
+#| label: fig-polar1
+#| echo: false
+#| fig-cap: "A line plot on a polar axis"
+import pandas as pd
+import matplotlib.pyplot as plt
+import seaborn as sns
+sns.set(style='ticks', palette='Set2')
+sns.despine()
+
+r2 = pd.read_csv("/home/VICOMTECH/cdellefemine/Documents/code/KKT-NN/Preprint/plots/r2.csv")[100:]
+plt.plot(r2['Step'], r2['Value'].ewm(alpha=2 / 3).mean())
+
+```
+### Comparison
 # Conclusions
