--- a/loads/dataset_loads_cp.ipynb
+++ b/loads/dataset_loads_cp.ipynb
@@ -119,7 +119,7 @@
    "outputs": [],
    "source": [
     "from pickle import dump\n",
-    "dump(ds, open(\"dataset_loads_comp.pkl\", \"wb\"))"
+    "dump(ds, open(\"dataset_loads_comp_norm.pkl\", \"wb\"))"
    ]
   },
   {
